:truck: Rename me route to account route
