# internal/web/docs/swagger.json
@@ -171,7 +171,7 @@
                 }
             }
         },
-        "/user/me": {
+        "/user/account": {
             "get": {
                 "description": "Get the user information",
                 "produces": [
@@ -180,7 +180,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Me route",
+                "summary": "Account route",
                 "responses": {
                     "200": {
                         "description": "OK",
